--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id = "cabecera">
                 Hyperblog
                 <span id = "tagline">
-                    Tu blog de confianza
+                    Tu blog maestro
                 </span>
             </div>
             <div id = "post">
@@ -17,6 +17,7 @@
                 <p>Los Blogs son la mejor forma de compartir informacion y tus ideas.
                 Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.
                 </p>
+                <p>Suscribete y dale like</p>
             </div>
         </div>
     </body>
