--- a/blogpost.html
+++ b/blogpost.html
@@ -14,9 +14,10 @@
             </div>
             <div id = "post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
-                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con una rama</p>
-                <p>Los Blogs son la mejor forma de compartir informacion y tus ideas.
-                Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.
+                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
+                <p><img src = "imagenes/equipo.jpg" width="100%"/></p>
+                <p>Los Blogs son la mejor forma de compartir informaci&oacute;n y tus ideas.
+                Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres... por ahora.
                 </p>
                 <p>Suscribete y dale like</p>
             </div>
